--- a/swiper-bundle.css
+++ b/swiper-bundle.css
@@ -157,7 +157,7 @@
     --swiper-navigation-size:44px
 }
 .swiper-button-next,.swiper-button-prev{
-    position:absolute;
+    position:relative;
     top:50%;
     width:calc(var(--swiper-navigation-size)/ 44 * 27);
     height:var(--swiper-navigation-size);
